# tg-summarizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
summarizer/: __main__.py  config.py  db.py  models.py  post_summary.py  tg_app.py
